--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,19 +1,54 @@
 body{
-  font-family: "Helvetica";
+  font-family: "Roboto";
   text-align: center;
-  padding: 50px 20px 0;
-  background: #f4f4f7;
-  color: #444;
+  padding: 50px 0 0;
+  background: #000000;
+  color: #FFFFFF;
   margin: 0;
 }
 
 h1{
   font-size: 65px;
   line-height: 1.2em;
-  border-bottom: #CCC solid 1px;
+  border-bottom: #0F0 solid 1px;
   padding: 20px 0;
 }
 
 h3{
   font-weight: 300;
+}
+
+p {
+  text-align: left;
+}
+
+footer {
+  background-color: #006b17;
+}
+
+.jumbotron {
+  background-color: #006b17;
+  margin-bottom:0px;
+}
+
+article {
+  background-color: #000000;
+  padding: 20px 20px 20px 20px;
+  margin-bottom: 20px;
+}
+
+footer {
+  background-color: #111111;
+}
+
+.icons-padding {
+  padding-left: 50px;
+}
+
+a {
+  color: #0F0;
+}
+a:hover {
+  color: #0B0;
+  text-decoration: none;
 }
