--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,7 +1,7 @@
 body{
   font-family: "Roboto";
   text-align: center;
-  padding: 50px 0 0;
+  padding: 80px 0 0;
   background: #000000;
   color: #FFFFFF;
   margin: 0;
@@ -51,4 +51,18 @@ a {
 a:hover {
   color: #0B0;
   text-decoration: none;
+}
+
+
+nav.navbar.navbar-expand-lg.navbar-dark.bg-green
+{
+  background-color:#111111;
+}
+
+.navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand {
+  color:#0F0;
+}
+
+.navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
+  color:#0B0;
 }
